# Universal-Controller-Script

./: pyproject.toml
.github/workflows/: python-app.yml
src/: consts.py  version_check.py
src/common/: __init__.py  activity_state.py  context_manager.py  param.py  settings.py
src/common/extension_manager/: devices.py  extension_manager.py  special_plugs.py  standard_plugs.py  window_plugs.py
src/common/logger/: __init__.py  log_item.py  logger.py
src/common/plug_indexes/: __init__.py  effect.py  fl_index.py  generator.py  plugin.py  window.py
src/common/profiler/: __init__.py  manager.py  profiler_context.py
src/common/states/: __init__.py  dev_state.py  device_detect.py  error_state.py  forward_state.py  main_state.py  script_state.py
src/common/tracks/: abstract.py  channel.py  mixer_track.py  (+1 more)
src/control_surfaces/: __init__.py  control_mapping.py  control_shadow.py
src/devices/: __init__.py  device.py  device_shadow.py
src/integrations/: __init__.py  integration.py
tests/: __init__.py  color_test.py  filter_test.py  forward_test.py  grid_mapper_test.py  log_test.py  profiler_test.py  util_test.py
tests/device/: device_match_event_test.py  devices_test.py  dummy_device_test.py  manual_mapping_test.py
tests/event_pattern/: basic_pattern_test.py  forward_test.py  fulfil_test.py  union_pattern_test.py
tests/helpers/: __init__.py  controls.py  performance.py  tools.py
tests/matchers/: basic_test.py  index_test.py
tests/value_strategy/: data_strategy_test.py  forwarded_strategy_test.py  note_strategy_test.py  twos_compliment_delta_test.py
(+167 files in other folders)
