[tool.poetry]
package-mode = false
name = "universal-controller-script"
version = "1.2.1"
description = "A free and open source program that integrates with FL Studio to provide deep integration between hardware controllers and software."
authors = ["Maddy Guthridge <hello@maddyguthridge.com>"]
license = "GPL v3"
readme = "README.md"

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
warn_return_any = true
show_column_numbers = true

[tool.coverage.run]
branch = true
omit = ["src/fl_typing"]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'return NotImplemented',
    '@overload',
    'raise AssertionError',
    'raise NotImplementedError',
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.poetry.dependencies]
python = "^3.9.1"
fl-studio-api-stubs = "^33.2.0"
typing-extensions = "^4.13.2"
jestspectation = "^1.4.5"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
jestspectation = "^1.4.5"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
